--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "nature",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rohitrana-coder.github.io/REPO_NAME",
-
+"homepage": "https://rohit rana-coder.github.io/rohitportfolio",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^7.0.0",
     "@fortawesome/free-brands-svg-icons": "^7.0.0",
@@ -23,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+"deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
